@@ -3,6 +3,8 @@ Version: 2.1.0
 Date: ????
   Features:
     - Added a per-player setting to adjust overlay opacity. (#19)
+  Bugfixes:
+    - Fixed that underground connections would cause entity rendering to end prematurely.
 ---------------------------------------------------------------------------------------------------
 Version: 2.0.1
 Date: 2023-10-14
